<resources>
    <string name="version">1.0.3</string>
    <string name="app_name">MRead</string>
    <string name="log">isDebug</string>
    <string name="hello_world">welcome to the gogohope!</string>
    <string name="btnusername">点击检查</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="image">main page image</string>
    <string name="iv_head">head portrait</string>
    <string name="btnmean">mean</string>
    <string name="textsize">32</string>
    <string name="btnIm">News</string>
    <string name="onlinehead">Online head pic</string>
    <string name="elsea">elsea</string>
    <string name="onlinemember">Online Member</string>
    <string name="newsfeed">News Feed</string>
    <string name="newsfeed_icon">Update Profile Photo</string>
    <string name="newsfeed_photo">Upload Photo</string>
    <string name="newsfeed_say">say</string>
    <string name="newsfeed_addmsg_default">What plan?</string>
    <string name="leftmean3">Settings</string>
    <string name="encounter">Encounter</string>
    <string name="favorite">Favorite</string>
    <string name="visiter">Visitor</string>
    <string name="giftbox">Gift Box</string>
    <string name="login">Sign In</string>
    <string name="online">Online</string>
    <string name="wall">Get seen by everyone,only 10 gold</string>
    <string name="setting">Settings</string>
    <string name="setvibrate">Vibrate</string>
    <string name="setringtone">Ringtone</string>
    <string name="setpush">Push Notification</string>
    <string name="setus">About Us</string>
    <string name="setjiaoyou">Dating Safety</string>
    <string name="setshiyong">Terms of use</string>
    <string name="setyinsi">Privacy Policy</string>
    <string name="setaccount">Account</string>
    <string name="gold">Gold</string>
    <string name="get_gold_five">500 Gold/$500</string>
    <string name="get_gold_four">200 Gold/$200</string>
    <string name="get_gold_three">100 Gold/$100</string>
    <string name="get_gold_two">50 Gold/$50</string>
    <string name="get_gold_one">20 Gold/$20</string>
    <string name="facemall">Sticker Store</string>
    <string name="mall">Mall</string>
    <string name="buy">Buy</string>
    <string name="free">Free</string>
    <string name="downloadFaceDemo">Downloaded</string>
    <string name="downloadComplete">Download Complete</string>
    <string name="buySuccess">Buy success</string>
    <string name="buyFailed">Buy failed</string>
    <string name="encounter_main_title">Do you like her?</string>
    <string name="encounter_yes_text">Yes</string>
    <string name="encounter_no_text">No</string>
    <string name="whoilike">Who I like</string>
    <string name="wholikeme">Who like me</string>
    <string name="matchlist">Match list</string>
    <string name="perfacehead">Upload profile photo first</string>
    <string name="editmsg">Message</string>
    <string name="sendimagebyalbum">Photo</string>
    <string name="sendimagebycamera">Camera</string>
    <string name="album">Album</string>
    <string name="icon">Icon</string>
    <string name="defaultalbum">default</string>
    <string name="just">Just</string>
    <string name="minutesago">minutes ago</string>
    <string name="yearago">More than one year</string>
    <string name="dayago">day ago</string>
    <string name="errorloginname">Wrong Username</string>
    <string name="errorloginpwd">Wrong Password</string>
    <string name="errorloginother">Lost Connection</string>
    <string name="currentname">Worng username or password</string>
    <string name="link_text_auto">By continuing,you are confirming that you are read and agree to the terms of service</string>
    <string name="selectphoto">Choose Profile Photo</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="brithday">Birthday</string>
    <string name="registgender">Gender</string>
    <string name="registerzhengce">Continue to indicate that you receive our terms of use and privacy policy. We will never share your contact information</string>
    <string name="dialog_note">Prompt</string>
    <string name="whetherexist">Whether to exit</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="birthday">Birthday</string>
    <string name="regist">Complete</string>
    <string name="registuser">Username</string>
    <string name="registpwd">Password</string>
    <string name="registemail">E-mail</string>
    <string name="registdate">Birthday</string>
    <string name="registAlbum">Choose Photo</string>
    <string name="registcamera">Take Photo</string>
    <string name="errorgistusername">Your Username must be between 6-30 alphanumeric characters.</string>
    <string name="errorgistuserpwd">Please enter a valid password.Must be between 6-30 alphanumeric characters</string>
    <string name="errorgistuseremail">Please enter a valid email address. For example fred@domain.com.</string>
    <string name="errorgistusergender">Please select your Gender</string>
    <string name="errorgistuserbirth">Please select your Birthday</string>
    <string name="errorregist4">Email has been registered</string>
    <string name="errorregist3">Username has been registered</string>
    <string name="errorregist2">Your Username must be between 6-30 alphanumeric characters.</string>
    <string name="register_shiyong">terms of use</string>
    <string name="register_yinsi">privacy policy</string>
    <string name="forgotpwdsuccess">We will send you an email,Please Check.</string>
    <string name="error2">Wrong Email address</string>
    <string name="error4">Send email failed</string>
    <string name="error3">Wrong Username</string>
    <string name="error500">The server is busy</string>
    <string name="tvforgetPwd">Forget Password</string>
    <string name="forgotpwdemail">Email address</string>
    <string name="forgotpwdeusername">Enter Username</string>
    <string name="register_hint_email">Enter the email</string>
    <string name="register_hint_pwd">Enter the password</string>
    <string name="forgotpwdbtntext">Send</string>
    <string name="forgotemail">Wrong Email Address</string>
    <string name="forgotpwdexplain">Enter Username and email address when you registered, Click Send. We will send you an email to get your password back, Please Check.</string>
    <string name="email">Enter Email address</string>
    <string name="addfriend">Added to Friends list</string>
    <string name="addagain">Already Friend</string>
    <string name="adderror">Add friend failed</string>
    <string name="loading">Loading...</string>
    <string name="no_more">There are no more</string>
    <string name="reloading">Click reload</string>
    <string name="pressexit">Press back again to quit</string>
    <string name="pagesecondbtn">New thing</string>
    <string name="pagefirstbtn">About</string>
    <string name="pageim">Chat</string>
    <string name="pagealum">Album</string>
    <string name="report">Report</string>
    <string name="detail_description">Detailed Description</string>
    <string name="stop">Stop</string>
    <string name="stop_note">Prevents the user, the other party will not be able to send you a message</string>
    <string name="pageaddfriend">Add Friend</string>
    <string name="pageaddicon">Profile photo</string>
    <string name="iconerror">Change profile photo failed</string>
    <string name="adderror500">Server error</string>
    <string name="news">News</string>
    <string name="imedit">Edit</string>
    <string name="imnews">Recent contacts</string>
    <string name="imfriend">Friend list</string>
    <string name="imdelete">Delete</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refresh…</string>
    <string name="pull_to_refresh_footer_release_label">Release to refresh</string>
    <string name="pull_to_refresh_footer_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_footer_refreshing_label">Loading...…</string>
    <string name="newserror2">Must under 200 characters</string>
    <string name="sendfailer">Sending message failed</string>
    <string name="alter_password">Change password</string>
    <string name="alter_account">Logout</string>
    <string name="alter_password_new">New Password</string>
    <string name="alter_password_confirm">Confirm Password</string>
    <string name="alter_password_hint1">Enter the new password</string>
    <string name="alter_password_hint2">Enter the confirmation code</string>
    <string name="error_alter_pwd">Change Password Failed</string>
    <string name="country">Country</string>
    <string name="language">Eanguage</string>
    <string name="infotext">Empty context</string>
    <string name="textlenght">Must under 148 characters</string>
    <string name="textlen">Must under 100 characters</string>
    <string name="infosuccess">Success</string>
    <string name="infofailure">Failure</string>
    <string name="infobirthday">Birthday</string>
    <string name="infocountry">Country</string>
    <string name="infoeducation">Education</string>
    <string name="infoheigh">Level</string>
    <string name="infoganqing">Introduction feelings</string>
    <string name="infoweizhi">Location</string>
    <string name="infocity">City</string>
    <string name="infonotejieshao">To tell you about yourself</string>
    <string name="infoincome">Income</string>
    <string name="infolanguage">Language</string>
    <string name="infoweight">Weight</string>
    <string name="infointerest">Intresting</string>
    <string name="infointroduce">Basic Information</string>
    <string name="infoaboutself">About yourself</string>
    <string name="infoabout">About </string>
    <string name="infoaskme">To ask me</string>
    <string name="infojob">Work</string>
    <string name="infomarriage">Relationship status</string>
    <string name="photosuccess">Success</string>
    <string name="photoerror">Failed</string>
    <string name="loadalumerror">Loading failed</string>
    <string name="alertpassword">Change password success</string>
    <string name="alertpassworderror">Change password failed</string>
    <string name="alertpassword1">Wrong Password</string>
    <string name="alertpassword2">Passwords do not match</string>
    <string name="registwel">Register</string>
    <string name="updatemoreerror">Membership function, please upgrade</string>
    <string name="errorgist">Wrong Username or Password</string>
    <string name="noteuploadicon">"Upload picture, you can get more people's attention"</string>
    <string name="friendchat">Add friend first</string>
    <string name="loginsuccess">Login success</string>
    <string name="errorloginserver">Server exception</string>
    <string name="errorregist5">Sign up success</string>
    <string name="nonetwork">The current network is unavailable, please check your network settings</string>
    <string name="netcontext">Connect network?</string>
    <string name="updateversion">Update Perdate to the latest version ?</string>
    <string name="mustupdateversion">Perdate version too low, Update to the latest version ?</string>
    <string name="updateerror">Upgrade membership,chat any where any time</string>
    <string name="add_head_icon">Set profile photo</string>
    <string name="delet_photo">Delete photo</string>
    <string name="download">Loading......</string>
    <string name="update_sure">Update</string>
    <string name="aboutexplain">Meet new friends</string>
    <string name="version_show">Version:</string>
    <string name="urlword">Copyright ? 2012 SEM Network Technology Co.,Ltd.</string>
    <string name="updateinfo">Chat with your friends anytime</string>
</resources>