<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/rang_edit_slefinfo_eara"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@id/ll_username"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/tv_regist_username"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.0"
                android:text="@string/registuser"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/et_regist_username"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3.0"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/forgotpwdeusername"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#ff090909"
                android:textColorHint="#ff8f8f8f"
                android:textSize="15.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#ffdddddd" />

        <LinearLayout
            android:id="@id/ll_email"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/tv_regist_email"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.0"
                android:text="@string/registemail"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/et_regist_email"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3.0"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/register_hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#ff090909"
                android:textColorHint="#ff8f8f8f"
                android:textSize="15.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#ffdddddd" />

        <LinearLayout
            android:id="@id/ll_password"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/tv_regist_password"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.0"
                android:text="@string/registpwd"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/et_regist_password"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3.0"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/register_hint_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#ff090909"
                android:textColorHint="#ff8f8f8f"
                android:textSize="15.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#ffdddddd" />

        <LinearLayout
            android:id="@id/ll_gender"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/tv_regist_gender"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:text="@string/registgender"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <RadioGroup
                android:id="@id/rg_gender"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center|right"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@id/rb_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:textColor="#ff8f8f8f"
                    android:textSize="15.0sp" />

                <RadioButton
                    android:id="@id/rb_woman"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textColor="#ff8f8f8f"
                    android:textSize="15.0sp" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#ffdddddd" />

        <LinearLayout
            android:id="@id/ll_brithday"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.0"
                android:text="@string/brithday"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <TextView
                android:id="@id/tv_regist_brithday"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="3.0"
                android:background="@null"
                android:gravity="center|right"
                android:hint="@string/birthday"
                android:singleLine="true"
                android:textColor="#ff909090"
                android:textColorHint="#ff8f8f8f"
                android:textSize="15.0sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@id/btnrigst_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/alter_button_selector"
        android:padding="11.0dip"
        android:text="@string/regist"
        android:textColor="@color/white"
        android:textSize="20.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20.0dip"
        android:gravity="bottom" >

        <TextView
            android:id="@id/tv_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#ff5e5d5d"
            android:textSize="14.0sp" />
    </RelativeLayout>

</LinearLayout>