<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/back_title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="5.0" >

        <android.support.v4.view.ViewPager
            android:id="@id/vp_update_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65.0dip"
            android:text="@string/updateinfo"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/rl_select_type"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_weight="1.0"
        android:clickable="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@id/tv_update_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="5.0dip"
                android:textColor="#ff4e4e4e"
                android:text="asd1"
                android:textSize="20.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10.0dip"
                android:background="@mipmap/list_next_icon"
                android:contentDescription="@string/elsea" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_weight="2.0" >

        <Button
            android:id="@id/btn_update"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/login_btn_icon"
            android:text="@string/update_sure"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>