<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/regist_back_title" /> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/rang_edit_slefinfo_eara"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="2.0"
                android:text="@string/username"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/et_username"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3.0"
                android:background="@null"
                android:gravity="center|right"
                android:inputType="textEmailAddress"
                android:paddingLeft="5.0dip"
                android:paddingRight="15.0dip"
                android:singleLine="true"
                android:hint="请输入邮箱"
                android:textColor="#ff090909"
                android:textSize="18.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#ffdddddd" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="2.0"
                android:text="@string/password"
                android:textColor="#ff020202"
                android:textSize="18.0sp" />

            <EditText
                android:id="@id/et_pwd"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3.0"
                android:background="@null"
                android:gravity="center|right"
                android:inputType="textPassword"
                android:paddingLeft="5.0dip"
                android:paddingRight="15.0dip"
                android:singleLine="true"
                android:hint="请输入密码"
                android:textColor="#ff090909"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@id/btnlogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/buyinfo_selector"
        android:padding="11.0dip"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20.0sp" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/buyinfo_selector"
        android:padding="11.0dip"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="20.0sp" />
    <TextView
        android:visibility="invisible"
        android:id="@id/tv_forgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20.0dip"
        android:clickable="true"
        android:text="@string/tvforgetPwd"
        android:textSize="16.0sp" />

</LinearLayout>